--- a/android/app/src/main/res/drawable/background_splash.xml
+++ b/android/app/src/main/res/drawable/background_splash.xml
@@ -4,10 +4,11 @@
     <item
         android:drawable="@color/red"/>
 
-    <item
+    <!-- <item
         android:width="200dp"
         android:height="200dp"
+        android:layout_marginTop="24dp"
         android:drawable="@mipmap/logo"
-        android:gravity="center" />
+        android:gravity="center" /> -->
 
 </layer-list>
